--- a/index.html
+++ b/index.html
@@ -18,5 +18,14 @@
   <body>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Login</li>
+          <li>Marketplace</li>
+          <li>Services</li>
+          <li>Contact Us</li>
+        </ul>
+      </nav>
   </body>
 </html>
